too small place for material names #33294

Closed
opened 2012-11-24 23:02:59 +01:00 by endi endike · 5 comments

%%%see attached image: at the material pull-down menu there is not enough place for long names
but there is space...

ok, maybe not bug, maybe a small bug :)%%%

%%%see attached image: at the material pull-down menu there is not enough place for long names but there is space... ok, maybe not bug, maybe a small bug :)%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%looking into this - the menus didnt scale with DPI,
committed a fix for that r52569. This also makes them a little wider but for very long names its still not great so leaving this report open.%%%

%%%looking into this - the menus didnt scale with DPI, committed a fix for that r52569. This also makes them a little wider but for very long names its still not great so leaving this report open.%%%

%%%Looking into a way to extend width of popup to width of ID search button + id name entry.%%%

%%%Looking into a way to extend width of popup to width of ID search button + id name entry.%%%

%%%Checked the code, it's quite tricky already there and thins particular feature can not be easily implemented without involving bigger code changes here.

Added a TODO in our wiki and closing with the report since it's more liek a thing-to-be-improved rather than a bug. lInk to wiki: http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/UserInterface#Search_menu%%%

%%%Checked the code, it's quite tricky already there and thins particular feature can not be easily implemented without involving bigger code changes here. Added a TODO in our wiki and closing with the report since it's more liek a thing-to-be-improved rather than a bug. lInk to wiki: http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/UserInterface#Search_menu%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33294
No description provided.