search box width's now scale with DPI setting. was checking on: [#33294] too small place for material names

this helps in some cases but doesn't resolve issue with very long names.